app/assets/stylesheets/ecosystems.scss
/* ... */
.container {
  @include media-breakpoint-down(md) {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

.text-decoration-hover {
  text-decoration: none;
  &:hover{
    text-decoration: underline;
  }
}

body {
  font-optical-sizing: auto;
}


.header__global {
  width: 100%;
}

.header__global__site-logo-wrapper {
  h1 {
    font-size: 0;
    line-height: 0;
    margin: 0;
  }
}

.site-logo {
  font-size: 0;
  line-height: 0;
  color: transparent;

  background-image: asset-url('ecosystems-logo.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  display: inline-block;

  width: 155px;
  height: 30px;
}

.site-logo--white {
	background-image: asset-url('ecosystems-logo-white.svg');
  width: 246px;
  height: 50px;
}

.site-name {
  line-height: 50px;
  display: inline-block;
  vertical-align: middle;
  font-size: 40px;
  font-weight: 400;
  color: $color-purple;
  padding-top: 70px;
}

.header__global__menu-link {
  @include spesh-link();
  .bi {
    display: inline-block;
    transition: transform 0.35s ease-out; //same time as bootstrap's animation
    transform-origin: center;
  }
}

.header__global__menu-link[aria-expanded="true"] {
  .bi {
    transform: rotateX(180deg);
  }
}


.header__global__menu__category {
  margin-bottom: 0.5rem;
}

.header__global__menu__category-title {
  display: inline;
  @include font-size(1rem);
}

.header__global__menu__category-links {
  @include font-size(1rem);
  display: inline;
  padding-left: 1rem;
  li {
    display: inline;
    margin-right: 1rem;
  }
  a {
    color: $color-black;
    &:hover,
    &:active,
    &:focus {
      color: $color-purple-dark;
    }
    &.active {
      text-decoration: none;
      color: $color-purple-dark;
    }
  }
}

.header__local {
  border-top: 1px solid $color-grey;
  margin-top: 2rem;
}

.header__local__sitename {
  color: $color-purple-dark;
}

.header__local__homelink {
  color: $color-purple-dark;
  text-decoration: none;
  &:hover,
  &:active,
  &:focus {
    color: $color-black;
  }
}

.header__local__description {
  @include font-size(1rem);
}

.header__local__navigation {
  a {
    @include spesh-link();
    padding: 0;
  }
  li {
    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
  }
}

.nav {
  @include media-breakpoint-up(lg) {
    justify-content: end;
  }
}

.dark-section {
  background-color: $color-purple-dark;
  color: $color-white;
  a {
    color: $color-white;
    &:hover,
    &:active,
    &:focus, 
    &:visited {
      color: $color-white;
    }
    
  }
}
.extra-bold {
  font-weight: 900;
}

.extra-small {
  @include font-size(0.778rem);
}

.table a {
  @include spesh-link();
}

/*  Header */
.header {
  padding: 2em 0;
}

/*  Footer */
.footer {
  padding: 2em 0;
  margin-top: 4em;
}

.footer-links {
  margin-top: 1rem;
  @include media-breakpoint-up(md) {
    text-align: right;
  }
  a {
    text-decoration: none;
  }
  li {
    margin-bottom: 0.25rem;
  }
}

.footer-icons {
  margin-top: 1em;
  a {
    margin: 0 0.5em;
    text-decoration: none;
  }
}
.lead {
  @include font-size(1.625rem);
}

/* Hero */
.hero {
  .lead {
    max-width: 42rem;
    margin: 0 auto;
  }
}

/* Callout box used for link to announcement */
.callout {
  border: 0;
  border-radius: 1.5rem;
  line-height: 1em;
  height: 7.5rem;
  padding: 0.25em 1.5em 0;
  display: flex;
  align-items: center; 
  justify-content: center; 
  box-shadow: 0px 7px 24px $color-purple-light;
}

.spesh-link {
  @include spesh-link();
}

.spesh-link--hover-only {
  box-shadow: inset 0 -0.3em 0 transparentize($color-green, 1);
}


.fund-card {
  border: 0;
  border-radius: 1.5rem;
  img {
    border-radius: 0;
  }
  &:hover {
    box-shadow: 0px 7px 24px $color-purple-light;
  }
}

.label {
  display: block;
  @include font-size(0.875rem);
}

.fund-card--small {
  padding-bottom: 1.5rem;
  border-radius: 1rem;
  .card-body {
    padding-left: 0.25rem;
    padding-right: 0.25rem;
  }
  .card-title {
    @include font-size(1rem);
    margin-bottom: 0;
  }
  a {
    text-decoration: none;
    color: $color-black;
  }
  .card-img-top {
    max-width: 100px;
    max-height: 100px;
    margin: 1.5rem auto;
  }
}

.grey-grad-bg  {
  background: linear-gradient(180deg, #FFFFFF 0%, #F5F5FF 100%);
}

/* all the nasty code for the homepage funds section */
.fund-promo-section {
  position: relative;
  margin-bottom: -100px;
  &::after {
    content: '';      
    display: block;
    width: 100%;
    height: 254px;
    background-image: linear-gradient(to bottom, #ffffff00 0%, $color-grey-light 70%);
    z-index: 2;
    position: absolute;
    bottom: 0;
  }
}

.how-it-works {
  > div {
    @include media-breakpoint-up(xl) {
      padding-right: 2.5em;
    }
  }
}

.flex-payments {
  margin-top: 4rem;
  margin-bottom: 4rem;
  @include media-breakpoint-up(md) {
    margin-top: 8rem;
    margin-bottom: 8rem;
  }
}

.block-link {
  /* class to make cards fully clickable */
  text-decoration: none;
}

.block-link--spesh {
  .spesh-link {
    display: inline-block;
  }
  /* if we have a .spesh-link in here, we need to attach the hover styles */
  &:hover,
  &:active,
  &:focus {
    .spesh-link {
      box-shadow: inset 0 -1em 0 $color-green;
    }
  }
}

.stat-card {
  display: inline-block;
  margin-right: 1.3334rem;
}

.stat-card-title {
  display: block;
}

.stat-card-text {
  display: inline-block
}

.stat-card-title {
  @include font-size(2.1875rem);
  font-weight: 800;
}

.fund-stat-bar--allocation-stat-bar {
  .stat-card {
    @include media-breakpoint-up(xl) {
      display: block;
      margin-right: 0;
    }
  }
  .stat-card-title {
    @include font-size(1.625rem);
  }
}

.fund-section-header {
  border-bottom: 3px solid $color-purple-light;
  .badge {
    @include font-size(0.875rem);
    margin-left: 1rem;
    position: relative;
    top: -0.7rem;
  }
}

.fund-header {
  .container {
    position: relative;
  }
}
/* ... */

