Fix for All services button on small screen
- 'ecosystems services' didn't really look right on mobile, and didn't seem to make sense to have it different, so renamed to 'all services'
- Also tweaked spacing and alignment on small screens

--- a/app/assets/stylesheets/ecosystems.scss
+++ b/app/assets/stylesheets/ecosystems.scss
@@ -318,6 +318,7 @@ body {
 
 .header__global__menu-link {
   @include spesh-link();
+  @include font-size(1rem);
   .bi {
     display: inline-block;
     transition: transform 0.35s ease-out; //same time as bootstrap's animation
